# libseq

./: Makefile.am  README.md  README.org  configure.ac
src/tests/: test_seq.cc
